<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BeachTest</string>
    <string name="google_maps_api_key">AIzaSyD1TmIEsc-Lpj_EwUt2JKLKDp_YJmzz5PI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dining_hall_name">Dining Hall Name</string>
    <string name="breakfast">Breakfast</string>
    <string name="view_menu1">View Menu</string>
    <string name="lunch">Lunch</string>
    <string name="view_menu2">View Menu</string>
    <string name="dinner">Dinner</string>
    <string name="view_menu3">View Menu</string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="john_smith">John Smith</string>
    <string name="write_your_review">Write your review here</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_photo">Add Photo</string>
    <string name="profile_picture_description">User(s) profile picture</string>
    <string name="review_image_description">Image attached to the user(s) review</string>
    <string name="email">Enter Your Email .....</string>
    <string name="password">Enter Your Password .....</string>
    <string name="savepassword">Save New Password</string>
    <string name="newpassword">Enter Your New Password .....</string>
    <string name="confirmpassword">Confirm Your Password .....</string>
    <string name="confirmnewpassword">Confirm Your New Password .....</string>
    <string name="login">Login</string>
    <string name="backlogin">Back to Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sendverification">Send Link to Email</string>
    <string name="Verify">Verify</string>
    <string name="EnterCode">Enter Code .....</string>
    <string name="Confirm">Confirm Code</string>
    <string name="guest">Continue as Guest</string>
    <string name="select_dietary_preference">Select Dietary Preference</string>
    <string name="classic_description">Classic\nNo holds barred</string>
    <string name="pescatarian_description">Pescatarian\nNo red meat or poultry</string>
    <string name="Halal">Halal\nLawful or Permitted</string>
    <string name="Vegetarian">Vegetarian\nNo meat</string>
    <string name="Vegan">Vegan\nOnly plants</string>
    <string name="Save">Save</string>
    <string name="dish_image_description">Image of a dish</string>
    <string name="thumbs_up_description">Thumbs up button</string>
    <string name="thumbs_down_description">Thumbs down button</string>
    <string name="burger">Burger</string>
    <string name="username">Enter User Name .....</string>
    <string name="choose_vendor_prompt">Choose between Food Truck Vendors or Farmers Market Vendors below:</string>
    <string name="food_trucks">Food Trucks</string>
    <string name="farmers_market_vendors">Farmers Market Vendors</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="kitchen_image_description">An image of a kitchen to set the theme for dietary preferences.</string>

    <!-- String resources for Food Truck Vendor descriptions -->
    <string name="ft_vendor_1">5 Elementos - Thu Mar 07 2024 @ Cal State Long Beach: Friendship Walk</string>
    <string name="ft_vendor_2">Baby\'s Burgers (LA) - Thu Mar 07 2024 @ Cal State Long Beach: Peterson Hall</string>
    <string name="ft_vendor_3">SUGO ITALIANO - Mon Mar 11 2024 @ Cal State Long Beach: Friendship Walk</string>
    <string name="ft_vendor_4">Crepes Bonaparte - Mon Mar 11 2024 @ Cal State Long Beach: Peterson Hall</string>
    <string name="ft_vendor_5">Smile Hot Dog - Tue Mar 12 2024 @ Cal State Long Beach: Friendship Walk</string>
    <string name="ft_vendor_6">Taco Therapy - Thu Mar 14 2024 @ Cal State Long Beach: Peterson Hall</string>
    <string name="ft_vendor_7">Turkish Grill - Thu Mar 14 2024 @ Cal State Long Beach: Friendship Walk</string>
    <string name="ft_vendor_8">LA LA Lasagna - Mon Mar 18 2024 @ Cal State Long Beach: Peterson Hall</string>
    <string name="ft_vendor_9">Kalamaki Greek La - Mon Mar 18 2024 @ Cal State Long Beach: Friendship Walk</string>

    <!-- String resources for Farmers Market Vendor descriptions -->
    <string name="fm_vendor_1">Local Farmers Produce</string>
    <string name="fm_vendor_2">Arepas Venezuelan Experience</string>
    <string name="fm_vendor_3">Tacomasa</string>
    <string name="fm_vendor_4">Bao Bao House</string>
    <string name="fm_vendor_5">Cue Bakeshop</string>
    <string name="fm_vendor_6">Pupusas Salvadorenas</string>
    <string name="fm_vendor_7">Long Beach Farmers Market Instagram</string>
    <string name="foodTruckVendorsList"> List of Food Truck Vendors:</string>
    <string name="farmersMarketVendorsList"> List of Farmer\'s Market Vendors:</string>

    <string name="current_language">Current Application Language: %1$s</string>
    <string name="topBanner">Top Banner</string>
    <string name="dish_details">     Dish Details/Ingredients</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="back_to_dining_halls">Back to Dining Halls</string>
    <string name="back_to_menu_items">Back to Menu Items</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="hillside_logo_description">Hillside Dining Hall logo</string>
    <string name="parkside_logo_description">Parkside Dining Hall logo</string>
    <string name="beachside_logo_description">Beachside Dining Hall logo</string>
    <string name="back_to_home">Back to Home Page</string>
    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="lang_pref_prompt">   Please select the language you prefer the application to use. : </string>
    <string name="title_activity_login">activity_login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- String resources for content descriptions -->
    <string name="top_banner_description">Top banner image</string>
    <string name="hillside_logo_description">Hillside Dining Hall logo</string>
    <string name="parkside_logo_description">Parkside Dining Hall logo</string>
    <string name="beachside_logo_description">Beachside Dining Hall logo</string>
    <string name="map_description">Map showing dining hall locations</string>


    !-- String resources for TextViews and Buttons -->
    <string name="dining_halls_location">Dining Halls Location</string>
    <string name="back_to_home">Back to Home Page</string>

</resources>