<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <ImageView
            android:id="@+id/topbannerProfile"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:contentDescription="@string/topBanner"
            android:src="@drawable/topbanner" />

        <TextView
            android:id="@+id/buttonFoodTrucks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Food Truck Vendors"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:drawableStart="@drawable/priceicon"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textVendor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_1"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textVendor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_2"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textVendor3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_3"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textVendor4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_4"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textVendor5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_5"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textVendor6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_6"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textVendor7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_7"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textVendor8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_8"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/textVendor9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ft_vendor_9"
            android:textColor="@android:color/black"
            android:drawableEnd="@drawable/arrow_forward"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/backhomebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home_page"
            android:textColor="@android:color/black"
            android:drawableStart="@drawable/arrowbackicon"
            android:padding="18dp"
            android:textAlignment="textStart"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</ScrollView>
